# devil

./: .gitignore  Cargo.toml  README.md
crates/devcontainers/: Cargo.toml  README.md
crates/devcontainers/examples/: parse_devcontainer.rs
crates/devcontainers/src/: lib.rs
devcontainers/: Cargo.toml  README.md
devcontainers/src/: lib.rs
