[workspace]
resolver = "3"
members = [
    "crates/devcontainers",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["portal-co <portal@portal-co.dev>"]
license = "MPL-2.0"
repository = "https://github.com/portal-co/devil"

[workspace.dependencies]
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
