[package]
name = "devcontainers"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "A Rust library for parsing and working with devcontainer.json files"

[features]
default = []
# Feature to allow handling unknown fields in JSON
allow-unknown-fields = []

[dependencies]
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
serde_json.workspace = true
